--- a/json2csv.html
+++ b/json2csv.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>json2csv</title>
+    <!-- jquery 百度cdn-->
+    <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js" type="text/javascript"></script>
     <style type="text/css">
         input {
             width: 730px;
@@ -13,20 +15,27 @@
 
         .drop_div {
             width: 800px;
-            height: 160px;
+            height: 120px;
             margin-bottom: 4px;
             border: 2px dashed #ccc;
             background-color: #FFF;
         }
+
 
         .drop_div:hover {
             cursor: pointer;
             background-color: #efefef;
         }
 
+        textarea {
+            width: 800px;
+            height: 60px;
+        }
+
         p {
             margin: 0;
         }
+
     </style>
 </head>
 <body>
@@ -42,14 +51,18 @@
 <label>拖拽/点击选择 JSON文件</label><input type="file" multiple id="jsonFile" style="display: none"
                                     onchange="csvByUpload()"/></br>
 <div id="drop" class="drop_div" onclick="csvByUpload()"></div>
+
+<h4>2.3 API 地址请求</h4>
+<textarea id="jsonUrls"></textarea></br>
+<button onclick="csvByAjax()">开始转换</button>
 <!--<h5>文件列表</h5>-->
 <!--<ul>-->
 <!--    <li>xx.png</li>-->
 <!--</ul>-->
 <!--<button onclick="csvByUpload()">再次读取</button>-->
 <h3>其他选项</h3>
-<label>字段解析</label><input id="header" value="{fd_code:'股票代码',fd_name:'股票名称'}"
-                          placeholder="数组格式按需解析字段,对象可映射解析头信息,可为空"/></br>
+<label>字段解析</label><input id="header" value=""
+                          placeholder="数组格式按需解析字段,对象可映射解析头信息。如 code,id / ['code','id'] / {id:'主键',code:'代码'},可为空"/></br>
 <label>添加csv头</label><input type="checkbox" id="hasHeader" checked/>
 
 <h3>日志</h3>
@@ -97,8 +110,50 @@
     }
 
 
+    function csvByAjax() {
+        let jsonUrls = $("#jsonUrls").val();
+        if (!jsonUrls) {
+            addMsg("请输入获取json的地址");
+        }
+
+        jsonUrls = jsonUrls.split(/[(\r\n)\r\n]+/);
+
+        jsonUrls.forEach((url, index) => {
+            if (!isURL(url)) {
+                addMsg(url + "不是URL地址");
+            }
+
+            $.ajax({
+                type: "get",
+                url: url,
+                success: function (data) {
+                    addMsg("开始处理" + url)
+                    if(typeof data ==="string"){
+                        data = parseJson(data);
+                    }
+                    downData(data, `data${++index}`)
+                },
+                error: function (XMLHttpRequest, textStatus, errorThrown) {
+                    console.warn(XMLHttpRequest, textStatus, errorThrown)
+                    addMsg("请求失败" + url)
+                }
+            });
+
+
+        })
+
+    }
+
+    /**
+     * URL地址
+     * @param {*} s
+     */
+    function isURL(s) {
+        return /^http[s]?:\/\/.*/.test(s)
+    }
+
+
     function downData(data, csvName) {
-        console.log(data)
         csvName = (csvName || 'data') + '.csv';
         if (!data) {
             addMsg("数据为空")
@@ -109,8 +164,8 @@
         let hasHeader = document.getElementById("hasHeader").checked;
         //表头
         let header = document.getElementById("header").value;
-        if(header){
-            header= parseJson(header) || header.split(",");
+        if (header) {
+            header = parseJson(header) || header.split(",");
         }
         //数据穿透
         let keys = document.getElementById("key").value.split(".");
@@ -123,7 +178,7 @@
                 }
             });
         } catch (e) {
-            addMsg(csvName + ",解析数据失败")
+            addMsg(csvName + ",数据解析失败")
             console.warn(`${e},数据不包含${keys}`)
         }
 
@@ -144,21 +199,37 @@
             }
         } else {
             addMsg(csvName + ",对象格式，正在读取数据")
+
+
             //为空 按首个数据块，全量解析
             if (!header) {
-                let values = Object.values(data)[0];
-                header = Object.keys(values);
+                let xData = Object.values(data);
+                let values = xData[0];
+                if (typeof values === "object") {
+                    header = Object.keys(values);
+                    data = xData;
+                } else {
+                    header = Object.keys(data);
+                }
+
+
             }
-            data = Object.values(data);
+
         }
+
         //csv是否包含头
         if (hasHeader) {
             csvString += readHeader(header);
         }
 
-        data.map(item => {
-            csvString += readRow(item, header);
-        })
+        if (Array.isArray(data)) {
+            data.map(item => {
+                csvString += readRow(item, header);
+            })
+        } else {
+            csvString += readRow(data, header);
+        }
+
         addMsg(csvName + "开始下载")
         //下载csv文件并添加按钮
         csvString = "data:application/csv;charset=utf-8,\ufeff" + encodeURIComponent(csvString)
@@ -227,10 +298,10 @@
      */
     function parseJson2(str) {
         try {
-            return new Function('"use strict"; return '+str)();
+            return new Function('"use strict"; return ' + str)();
         } catch (e) {
-            addMsg("解析json失败")
-            console.warn("Function解析失败", e);
+            addMsg("parseJson 转换数据失败，格式不正确，控制台查看详情")
+            console.warn("Function解析失败", e,"数据："+str);
             return null;
         }
     }
@@ -293,6 +364,7 @@
             dropDiv.style.backgroundColor = '#efefef'
         }
     }
+
 
     const dropDiv = document.getElementById("drop");
     // 拖拽事件绑定
